[package]
name = "ti154"
version = "0.3.2"
authors = ["Arthur Crippa Búrigo <arthurcburigo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Library for creating and parsing TI 15.4 UART packets."
repository = "https://github.com/acburigo/ti154"

[dependencies]
bytes = "0.4.12"
num-traits = "0.2"
num-derive = "0.2"
