[package]
name = "ti154"
version = "0.6.0"
authors = ["Arthur Crippa Búrigo <arthurcburigo@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Library for creating and parsing TI 15.4 UART packets."
repository = "https://github.com/acburigo/ti154"

[dependencies]
bitflags = "2.9.1"
bytes = "1.10.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
